2008-04-16  David Athay  <ko2fan@gmail.com>

	*  src/gui/guildlistbox.cpp, src/gui/guildwindow.h,
	src/gui/widgets/tabbedarea.cpp, src/gui/chat.cpp,
	src/gui/guildlistbox.h, src/gui/guildwindow.cpp, src/guild.cpp,
	src/guild.h, src/net/guildhandler.cpp: Fixed online status so that 
	users are shown as online.

2008-04-15  David Athay  <ko2fan@gmail.com>

	*  src/gui/guildlistbox.cpp, src/gui/guildwindow.h
	src/gui/widgets/tabbedarea.h, src/gui/widgets/tabbedarea.cpp,
	src/gui/guildlistbox.h, src/gui/guildwindow.cpp,
	src/net/guildhandler.cpp, src/net/protocol.h, src/net/chathandler.cpp,
	src/net/chatserver/chatserver.cpp, src/net/chatserver/chatserver.h,
	src/Makefile.am, data/graphics/gui/circle-green.png
	data/graphics/gui/circle-gray.png, tmw.cbp: Added online status of 
	guild members.

2008-04-14 Yohann Ferreira <bertram@cegetel.net>

	* src/CMakeLists.txt: Fixed (again) a compilation error using CMake.

2008-04-14  David Athay  <ko2fan@gmail.com>

	* src/gui/guildwindow.cpp, src/gui/chat.cpp, 
	src/gui/widgets/tabbedarea.h, src/gui/widgets/tabbedarea.cpp,
	src/gui/chat.h, src/gui/guildwindow.h, src/net/chathandler.cpp:
	Added new TabbedArea which extends gui::TabbedArea. Changed Guild and
	Chat windows to use new TabbedArea. Added private messaging.

2008-04-12  Yohann Ferreira  <bertram@cegetel.net>

	* src/CMakeLists.txt: Fixed a compilation error using Cmake.
	* src/gui/radiobutton.h, src/gui/radiobutton.cpp: Remove the rhomb
	around the radio buttons.

2008-04-12  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/widgets/layout.h, src/gui/skill.cpp, src/gui/trade.h,
	src/log.h, src/resources/mapreader.cpp, src/resources/spritedef.cpp:
	Fixed some compiler warnings and don't try to load particle effects
	when no file is set.

2008-04-09  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/shoplistbox.cpp, src/gui/shoplistbox.h: Fixed problem with
	row height in shop list box.

2008-04-08  Bjørn Lindeijer  <bjorn@lindeijer.nl>
